force-app/main/default/objects/Employee_Time_Card__c/Employee_Time_Card__c.object-meta.xml
<CustomObject>
    <description>Monthly time card for all active users/employees</description>
    <label>Employee Time Card</label>
    <nameField>
        <displayFormat>ETC-{00000000}</displayFormat>
        <label>Employee Time Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Time Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>