force-app/main/default/objects/Employee_Time_Card__c/fields/Active_Time_Card__c.field-meta.xml
<CustomField>
    <fullName>Active_Time_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Time Card</label>
    <type>Checkbox</type>
</CustomField>