force-app/main/default/objects/Employee_Time_Card__c/fields/Actual_Visit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Visit_Rate__c</fullName>
    <description>Average total visits per active working day (days with reported activity; excludes weekends, holidays, and zero-activity days).</description>
    <formula>IF(
  Days_With_Activities__c &gt; 0,
  Submitted_Calls__c / Days_With_Activities__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Visit Rate</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>