force-app/main/default/objects/Employee_Time_Card__c/fields/Base_Salary__c.field-meta.xml
<CustomField>
    <fullName>Base_Salary__c</fullName>
    <description>Monthly base salary for this payroll period.</description>
    <label>Base Salary</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>