force-app/main/default/objects/Employee_Time_Card__c/fields/Bonus_Eligibility_Override__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Eligibility_Override__c</fullName>
    <description>Override KPI-suggested bonus eligibility for this month.</description>
    <label>Bonus Eligibility Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compensation_Eligibility_Override</valueSetName>
    </valueSet>
</CustomField>