force-app/main/default/objects/Employee_Time_Card__c/fields/CLM_Percent_This_Month__c.field-meta.xml
<CustomField>
    <fullName>CLM_Percent_This_Month__c</fullName>
    <formula>IF(
  Submitted_Calls__c &gt; 0,
  CLM_Visits_Total__c / Submitted_Calls__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CLM Percent This Month</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>