force-app/main/default/objects/Employee_Time_Card__c/fields/CLM_Visits_Total__c.field-meta.xml
<CustomField>
    <fullName>CLM_Visits_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CLM Visits Total</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>