force-app/main/default/objects/Employee_Time_Card__c/fields/Coaching_Days_Total__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Days_Total__c</fullName>
    <description>Days with at least one coaching visit (planned or unplanned).</description>
    <label>Coaching Days Total</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>