force-app/main/default/objects/Employee_Time_Card__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <formula>Employee__r.CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company_Name</label>
    <type>Text</type>
</CustomField>