force-app/main/default/objects/Employee_Time_Card__c/fields/Coverage_Percent__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Percent__c</fullName>
    <formula>IF(
  Target_Customers__c &gt; 0,
  ((Target_Customers__c - Unvisited_Target_Customers__c) / Target_Customers__c),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coverage Percent</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>