force-app/main/default/objects/Employee_Time_Card__c/fields/Days_With_Activities__c.field-meta.xml
<CustomField>
    <fullName>Days_With_Activities__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Days With Activities</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>