force-app/main/default/objects/Employee_Time_Card__c/fields/Double_Visits_Total__c.field-meta.xml
<CustomField>
    <fullName>Double_Visits_Total__c</fullName>
    <description>Count of completed double (coaching) visits for the month.</description>
    <label>Double Visits Total</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>