force-app/main/default/objects/Employee_Time_Card__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employee_Time_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>