force-app/main/default/objects/Employee_Time_Card__c/fields/Employee_Manager__c.field-meta.xml
<CustomField>
    <fullName>Employee_Manager__c</fullName>
    <formula>Employee__r.Manager.FirstName &amp;&quot; &quot;&amp; Employee__r.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Manager</label>
    <type>Text</type>
</CustomField>