force-app/main/default/objects/Employee_Time_Card__c/fields/KOL_Coverage_Percent__c.field-meta.xml
<CustomField>
    <fullName>KOL_Coverage_Percent__c</fullName>
    <formula>IF(
  KOL_Target_Count__c &gt; 0,
  KOL_Visited_Count__c / KOL_Target_Count__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KOL Coverage Percent</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>