force-app/main/default/objects/Employee_Time_Card__c/fields/KOL_Target_Count__c.field-meta.xml
<CustomField>
    <fullName>KOL_Target_Count__c</fullName>
    <description>Number of KOL accounts in the rep territory plan.</description>
    <label>KOL Target Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>