force-app/main/default/objects/Employee_Time_Card__c/fields/KOL_Visited_Count__c.field-meta.xml
<CustomField>
    <fullName>KOL_Visited_Count__c</fullName>
    <description>Number of KOL accounts visited at least once in the month.</description>
    <label>KOL Visited Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>