force-app/main/default/objects/Employee_Time_Card__c/fields/LCF_Percent__c.field-meta.xml
<CustomField>
    <fullName>LCF_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>LF %</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>