force-app/main/default/objects/Employee_Time_Card__c/fields/MCF_Percent__c.field-meta.xml
<CustomField>
    <fullName>MCF_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MF %</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>