force-app/main/default/objects/Employee_Time_Card__c/fields/MR_Breast_Imaging_Target__c.field-meta.xml
<CustomField>
    <fullName>MR_Breast_Imaging_Target__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Misr Radiology — Breast Imaging (Mammography) Target</description>
    <label>Breast Imaging (Mammography) Target</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>