force-app/main/default/objects/Employee_Time_Card__c/fields/MR_CT_Scan_Sold__c.field-meta.xml
<CustomField>
    <fullName>MR_CT_Scan_Sold__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Misr Radiology — CT Scan Sold</description>
    <label>CT Scan Sold</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>