force-app/main/default/objects/Employee_Time_Card__c/fields/MR_Dental_Imaging_Target__c.field-meta.xml
<CustomField>
    <fullName>MR_Dental_Imaging_Target__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Misr Radiology — Dental Imaging Unit Target</description>
    <label>Dental Imaging Unit Target</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>