force-app/main/default/objects/Employee_Time_Card__c/fields/MR_Digital_XRay_Target__c.field-meta.xml
<CustomField>
    <fullName>MR_Digital_XRay_Target__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Misr Radiology — Digital X-Ray Target</description>
    <label>Digital X-Ray Target</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>