force-app/main/default/objects/Employee_Time_Card__c/fields/MR_Other_Services_Sold__c.field-meta.xml
<CustomField>
    <fullName>MR_Other_Services_Sold__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Misr Radiology — Other Services Sold</description>
    <label>Other Services Sold</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>