force-app/main/default/objects/Employee_Time_Card__c/fields/MR_PET_MRI_Sold__c.field-meta.xml
<CustomField>
    <fullName>MR_PET_MRI_Sold__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Misr Radiology — PET/MRI Sold</description>
    <label>PET/MRI Sold</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>