force-app/main/default/objects/Employee_Time_Card__c/fields/MR_Totum_MRI_Target__c.field-meta.xml
<CustomField>
    <fullName>MR_Totum_MRI_Target__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Misr Radiology — Totum MRI Scan Target</description>
    <label>Totum MRI Scan Target</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>