force-app/main/default/objects/Employee_Time_Card__c/fields/MR_Ultrasound_Target__c.field-meta.xml
<CustomField>
    <fullName>MR_Ultrasound_Target__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Misr Radiology — Ultrasound Target</description>
    <label>Ultrasound Target</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>