force-app/main/default/objects/Employee_Time_Card__c/fields/MR_Womens_Health_Target__c.field-meta.xml
<CustomField>
    <fullName>MR_Womens_Health_Target__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Misr Radiology — Women&apos;s Health Unit Target</description>
    <label>Women&apos;s Health Unit Target</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>