force-app/main/default/objects/Employee_Time_Card__c/fields/Not_Reported_Days__c.field-meta.xml
<CustomField>
    <fullName>Not_Reported_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Not Reported Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>