force-app/main/default/objects/Employee_Time_Card__c/fields/PM_Visits_Total__c.field-meta.xml
<CustomField>
    <fullName>PM_Visits_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total completed HCP visits in the plan cycle month.</description>
    <label>PM Visits Total</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>