force-app/main/default/objects/Employee_Time_Card__c/fields/Single_Visits_Total__c.field-meta.xml
<CustomField>
    <fullName>Single_Visits_Total__c</fullName>
    <description>Count of completed single (non-double) visits for the month.</description>
    <label>Single Visits Total</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>