force-app/main/default/objects/Employee_Time_Card__c/fields/Target_Customers__c.field-meta.xml
<CustomField>
    <fullName>Target_Customers__c</fullName>
    <label>Target Customers</label>
    <summaryForeignKey>Employee_Time_Card_Account_Target__c.Employee_Time_Card__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>