force-app/main/default/objects/Employee_Time_Card__c/fields/Territory_BU__c.field-meta.xml
<CustomField>
    <fullName>Territory_BU__c</fullName>
    <description>Business unit from territory hierarchy (Head Office level).</description>
    <label>Territory BU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>