force-app/main/default/objects/Employee_Time_Card__c/fields/Territory_District__c.field-meta.xml
<CustomField>
    <fullName>Territory_District__c</fullName>
    <description>District manager territory from hierarchy.</description>
    <label>Territory District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>