force-app/main/default/objects/Employee_Time_Card__c/fields/Territory_Line__c.field-meta.xml
<CustomField>
    <fullName>Territory_Line__c</fullName>
    <description>Business line territory from hierarchy (e.g. GIT, Diabetes).</description>
    <label>Territory Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>