force-app/main/default/objects/Employee_Time_Card__c/fields/Territory_Title_Employee__c.field-meta.xml
<CustomField>
    <fullName>Territory_Title_Employee__c</fullName>
    <description>Report grouping: Territory | Title | Employee name</description>
    <formula>BLANKVALUE(Territory__c, &quot;&quot;) &amp; &quot; | &quot; &amp; BLANKVALUE(Employee__r.Title, &quot;&quot;) &amp; &quot; | &quot; &amp; BLANKVALUE(Employee__r.FirstName &amp; &quot; &quot; &amp; Employee__r.LastName, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory, Title, Employee</label>
    <type>Text</type>
</CustomField>