force-app/main/default/objects/Employee_Time_Card__c/fields/Time_Card_Month_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Time_Card_Month_End_Date__c</fullName>
    <label>Time Card Month End Date</label>
    <type>Date</type>
</CustomField>