force-app/main/default/objects/Employee_Time_Card__c/fields/TOT_Days_Total__c.field-meta.xml
<CustomField>
    <fullName>TOT_Days_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TOT Days Total</label>
    <precision>8</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>