force-app/main/default/objects/Employee_Time_Card__c/fields/Total_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Days</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>