force-app/main/default/objects/Employee_Time_Card__c/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>