force-app/main/default/objects/Employee_Time_Card__c/fields/Unvisited_Target_Customers__c.field-meta.xml
<CustomField>
    <fullName>Unvisited_Target_Customers__c</fullName>
    <label>Unvisited Target Customers</label>
    <summaryFilterItems>
        <field>Employee_Time_Card_Account_Target__c.Is_Visited__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Employee_Time_Card_Account_Target__c.Employee_Time_Card__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>