force-app/main/default/objects/Employee_Time_Card__c/fields/Visit_Target__c.field-meta.xml
<CustomField>
    <fullName>Visit_Target__c</fullName>
    <label>Visit Target</label>
    <summarizedField>Employee_Time_Card_Account_Target__c.Target_Visit_Frequency__c</summarizedField>
    <summaryForeignKey>Employee_Time_Card_Account_Target__c.Employee_Time_Card__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>